--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,11 @@
   "name": "webxr-fingerprint",
   "version": "1.0.0",
   "description": "A web server for fingerprinting XR devices using the WebXR API",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "watch": "nodemon index.js",
+    "start": "node app.js",
+    "watch": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
