--- a/user_permission_extension/manifest.json
+++ b/user_permission_extension/manifest.json
@@ -7,7 +7,7 @@
         "scripting",
         "tabs"
     ],
-    "host_permissions": ["https://*/*"],
+    "host_permissions": ["http://*/*", "https://*/*"],
     "background": {
         "service_worker": "background.js"
     }
